--- a/Timer and Keyboard MOO ICT/MainWindow.xaml
+++ b/Timer and Keyboard MOO ICT/MainWindow.xaml
@@ -1,23 +1,24 @@
-﻿<Window x:Class="ZeldaWPF.MainWindow"
+<Window x:Class="ZeldaWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ZeldaWPF"
         mc:Ignorable="d"
-        Title="ZelfdaWF" Height="640" Width="820">
+        Title="ZelfdaWF" Height="640" Width="820"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Canvas Name="MainMenu" Background="Black" Focusable="True">
-            <Image Source="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Texture\menu.png" Stretch="UniformToFill" Height="624" Width="820" HorizontalAlignment="Left" VerticalAlignment="Center"></Image>
+            <Image Source="C:\Users\79044\Desktop\игра\HallowBlade-main\Timer and Keyboard MOO ICT\Data\Texture\menu.png" Stretch="UniformToFill" Height="624" Width="820" HorizontalAlignment="Left" VerticalAlignment="Center"></Image>
             <Button Canvas.Left="555" Canvas.Top="468" Click="Button_Click" Height="110" Width="255" HorizontalAlignment="Left" VerticalAlignment="Center" >
 
                 <Button.Background>
-                    <ImageBrush ImageSource="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Texture\play_button.png"></ImageBrush>
+                    <ImageBrush ImageSource="C:\Users\79044\Desktop\игра\HallowBlade-main\Timer and Keyboard MOO ICT\Data\Texture\play_button.png"></ImageBrush>
                 </Button.Background>
             </Button>
         </Canvas>
         <Canvas Name="myCanvas" Background="LightBlue" Focusable="False" Visibility="Collapsed">
-            <MediaElement x:Name="outer_music" Source="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\outer_music.mp3" IsMuted="True"></MediaElement>
+            <MediaElement x:Name="outer_music" Source="C:\Users\79044\Desktop\игра\HallowBlade-main\Timer and Keyboard MOO ICT\Data\outer_music.mp3" IsMuted="True"></MediaElement>
             <Rectangle Name="black" Fill="Black" Height="100" Width="820"></Rectangle>
             <!--<Rectangle Name="player" Height="50" Width="50" Canvas.Left="375" Canvas.Top="167" RenderTransformOrigin="0.545,0.545">
             <Rectangle.Fill>
@@ -26,6 +27,59 @@
         </Rectangle>-->
             <!--<Rectangle Name="box" Height="50" Width="50" Fill="Purple" Canvas.Left="381" Canvas.Top="279" />-->
 
+        </Canvas>
+
+        <!--Камень, ножницы бумага-->
+        <Canvas Margin="0,0,0,-6" Grid.ColumnSpan="2" Visibility="Hidden" >
+            <Canvas.Background>
+                <ImageBrush ImageSource="/game_2_background.png"/>
+            </Canvas.Background>
+            <Button x:Name="btnRock" Height="99" Width="184" Canvas.Left="43" Canvas.Top="460" Click="btnRock_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Content="">
+                <Button.Background>
+                    <ImageBrush ImageSource="/Rock_button.png"/>
+                </Button.Background>
+            </Button>
+            <Button x:Name="btnScissors" Height="99" Width="184" HorizontalAlignment="Center" Canvas.Top="460" VerticalAlignment="Center" Canvas.Left="318" Click="btnScissors_Click" Content="">
+                <Button.Background>
+                    <ImageBrush ImageSource="/Scissors_button.png"/>
+                </Button.Background>
+            </Button>
+            <Button Height="99" Width="184" Canvas.Top="460" Canvas.Left="578" Click="btnPaper_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Content="" RenderTransformOrigin="0.568,0.112">
+                <Button.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="0.248"/>
+                        <TranslateTransform X="0.144" Y="0.032"/>
+                    </TransformGroup>
+                </Button.RenderTransform>
+                <Button.Background>
+                    <ImageBrush ImageSource="/Paper_button.png"/>
+                </Button.Background>
+            </Button>
+            <Rectangle x:Name="picPlayer" Canvas.Top="205" Height="220" Width="220" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="36">
+                <Rectangle.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="-0.344"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Rectangle.RenderTransform>
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="/Question_button.png"/>
+                </Rectangle.Fill>
+            </Rectangle>
+            <Rectangle x:Name="picCPU" Canvas.Left="558" Canvas.Top="205" Height="220" Width="220" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="/Question_button.png"/>
+                </Rectangle.Fill>
+            </Rectangle>
+            <TextBlock FontSize="35" Canvas.Left="113" Canvas.Top="127" HorizontalAlignment="Center" VerticalAlignment="Top">Вы</TextBlock>
+            <TextBlock x:Name="txtMessage" FontSize="35" Canvas.Left="299" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-0.138,0.521" Text="Вы: 0 - Босс: 0"/>
+            <TextBlock x:Name="roundsText" FontSize="35" Canvas.Left="333" Text="Раунды: 3" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Top="61"/>
+            <TextBlock FontSize="35" Canvas.Left="632" Canvas.Top="127" HorizontalAlignment="Left" VerticalAlignment="Top" Text="Босс"/>
+            <TextBlock x:Name="txtTime" FontSize="50" Canvas.Left="396" Canvas.Top="282" HorizontalAlignment="Center" VerticalAlignment="Top" Text="5" Height="64" Width="28"/>
         </Canvas>
     </Grid>
 
