--- a/Timer and Keyboard MOO ICT/MainWindow.xaml
+++ b/Timer and Keyboard MOO ICT/MainWindow.xaml
@@ -7,19 +7,44 @@
         mc:Ignorable="d"
         Title="ZelfdaWF" Height="640" Width="820"
         WindowStartupLocation="CenterScreen">
+    
     <Grid>
-        <Canvas Name="MainMenu" Background="Black" Focusable="True">
-            <Image Source="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Texture\menu.png" Stretch="UniformToFill" Height="624" Width="820" HorizontalAlignment="Left" VerticalAlignment="Center"></Image>
-            <Button Canvas.Left="555" Canvas.Top="468" Click="Button_Click" Height="110" Width="255" HorizontalAlignment="Left" VerticalAlignment="Center" >
+        <Canvas Name="MainMenu" Background="Black" Focusable="True" Visibility="Visible">
+            <Image Source="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Texture\menu_ver2.png" Stretch="UniformToFill" Height="624" Width="820" HorizontalAlignment="Left" VerticalAlignment="Center"></Image>
+            <Button Canvas.Left="479" Canvas.Top="444" Click="Button_Click" Height="110" Width="255" HorizontalAlignment="Left" VerticalAlignment="Top" >
 
                 <Button.Background>
                     <ImageBrush ImageSource="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Texture\play_button.png"></ImageBrush>
                 </Button.Background>
             </Button>
         </Canvas>
+
+        <Canvas x:Name="Message" Background="Black" Focusable="False" Visibility="Collapsed">
+            <Image Source="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Texture\game_2_background_ver2.png" Stretch="UniformToFill" Height="600" Width="800" HorizontalAlignment="Left" VerticalAlignment="Center"></Image>
+
+            <Grid x:Name="Conttol" Visibility="Visible">
+                <Image Source="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Texture\arrows_buttons.png" Width="200" Margin="80,116,-80,-116" ></Image>
+                <Image Source="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Texture\wasd_buttons.png" Width="200" Margin="80,299,-80,-299" ></Image>
+                <Image Source="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Texture\E_button.png" Width="50" Margin="519,91,-369,-91" ></Image>
+                <TextBlock FontSize="20" Foreground="White" Text="Передвижение" Margin="118,440,-118,-442"></TextBlock>
+                <TextBlock FontSize="20" Foreground="White" Text="Атака" Margin="157,262,-157,-263"></TextBlock>
+                <TextBlock FontSize="20" Foreground="White" Text="Взаимодействие" Margin="472,213,-472,-214"></TextBlock>
+            </Grid>
+            <TextBlock Canvas.Left="50" Canvas.Top="50" x:Name="MessageText" FontSize="20" Foreground="White" Text="Управление"  Width="700" TextAlignment="Center" TextWrapping="Wrap"></TextBlock>
+            <Button Height="74" Width="146" Canvas.Left="337" Canvas.Top="518" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Button_Click_1">
+                <Button.Background>
+                    <ImageBrush ImageSource="\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Texture\ok_button.png"></ImageBrush>
+                </Button.Background>
+            </Button>
+        </Canvas>
+
         <Canvas Name="myCanvas" Background="LightBlue" Focusable="False" Visibility="Collapsed">
             <MediaElement x:Name="outer_music" Source="C:\Users\79044\Desktop\игра\HallowBlade-main\Timer and Keyboard MOO ICT\Data\outer_music.mp3" IsMuted="True"></MediaElement>
             <Rectangle Name="black" Fill="Black" Height="100" Width="820"></Rectangle>
+            <TextBlock Canvas.Left="30" Canvas.Top="20" FontFamily="{StaticResource EpilepsySans}" x:Name="OuterScreen" FontSize="20" Foreground="White" Text="Экран: 0 - 0"></TextBlock>
+            <TextBlock Canvas.Left="30" Canvas.Top="50" FontFamily="{StaticResource EpilepsySans}" x:Name="Health" FontSize="20" Foreground="White" Text="Здоровье: 3"></TextBlock>
+            <!--<TextBlock Canvas.Left="200" Canvas.Top="50" x:Name="DungeonScreen" FontSize="20" Foreground="White" Text="Экран подземелья: "></TextBlock>-->
+
             <!--<Rectangle Name="player" Height="50" Width="50" Canvas.Left="375" Canvas.Top="167" RenderTransformOrigin="0.545,0.545">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="\\Mac\Home\Desktop\WPF-Move-Rectangle-In-Canvas-Using-Keyboard-and-Timer-main\Timer and Keyboard MOO ICT\Data\Texture\mchar_ver1_noweapon_front1.png"></ImageBrush>
