--- a/Timer and Keyboard MOO ICT/MainWindow.xaml
+++ b/Timer and Keyboard MOO ICT/MainWindow.xaml
@@ -40,7 +40,11 @@
 
         <Canvas Name="myCanvas" Background="LightBlue" Focusable="False" Visibility="Collapsed">
             <MediaElement x:Name="outer_music" Source="Data\Music\outer_music.mp3" IsMuted="True"></MediaElement>
-            <Rectangle Name="black" Fill="Black" Height="100" Width="820"></Rectangle>
+            <Rectangle Name="black" Height="100" Width="805">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="Data\Texture\Frame_up.png"/>
+                </Rectangle.Fill>
+            </Rectangle>
             <TextBlock Canvas.Left="30" Canvas.Top="20" FontFamily="{StaticResource EpilepsySans}" x:Name="OuterScreen" FontSize="20" Foreground="White" Text="Экран: 0 - 0"></TextBlock>
             <TextBlock Canvas.Left="30" Canvas.Top="50" FontFamily="{StaticResource EpilepsySans}" x:Name="Health" FontSize="20" Foreground="White" Text="Здоровье: 3"></TextBlock>
             <!--<TextBlock Canvas.Left="200" Canvas.Top="50" x:Name="DungeonScreen" FontSize="20" Foreground="White" Text="Экран подземелья: "></TextBlock>-->
