добавил счет, чутка поменял записки

--- a/Timer and Keyboard MOO ICT/App.xaml
+++ b/Timer and Keyboard MOO ICT/App.xaml
@@ -6,5 +6,7 @@
     <Application.Resources>
         <FontFamily x:Key="EpilepsySans">\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Fonts\EpilepsySans.ttf#Epilepsy Sans</FontFamily>
         <FontFamily x:Key="EpilepsySansBold">\\Mac\Home\Desktop\HallowBlade\Timer and Keyboard MOO ICT\Data\Fonts\EpilepsySansBold.ttf#Epilepsy Sans</FontFamily>
+        <BitmapImage x:Key="AppIcon" UriSource="/Data/Texture/Pumpkin.png"/>
+
     </Application.Resources>
 </Application>
