--- a/Timer and Keyboard MOO ICT/MainWindow.xaml
+++ b/Timer and Keyboard MOO ICT/MainWindow.xaml
@@ -174,7 +174,94 @@
             </Button>
         </Canvas>
 
-        <!-- Конец -->
+        <!--Виселица-->
+        <Grid Name="Hangman" Visibility="Collapsed">
+            <Grid.RowDefinitions >
+                <RowDefinition Height="0" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions >
+                <ColumnDefinition Width="147.2" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <Image Source="Data\Texture\game_2_background_ver2.png" Stretch="UniformToFill" Height="600" Width="800" HorizontalAlignment="Left" VerticalAlignment="Center"></Image>
+
+
+            <Rectangle Canvas.Left="260" Canvas.Top="192" Height="239" Width="238" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="388,299,0,0" Grid.Row="1">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="data/texture/hangman/Hangman.png"/>
+                </Rectangle.Fill>
+            </Rectangle>
+
+
+            <Rectangle Canvas.Left="260" Canvas.Top="192" Height="303" Width="303" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="103,255,0,0" Grid.Row="1">
+                <Rectangle.Fill>
+                    <ImageBrush ImageSource="data/texture/hangman/Gallows.png"/>
+                </Rectangle.Fill>
+            </Rectangle>
+
+            <ListBox x:Name="CharList" FontFamily="Unispace" FontSize="30" HorizontalAlignment="Left" Margin="57,35,0,94" Width="90" Cursor="Hand" SelectedIndex="-1" Grid.Row="1">
+                <ListBox.BorderBrush>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FF531A43" Offset="1"/>
+                        <GradientStop Color="#FFBE9CB0" Offset="0"/>
+                    </LinearGradientBrush>
+                </ListBox.BorderBrush>
+                <ListBox.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FF531A43" Offset="1"/>
+                        <GradientStop Color="#FFAE6B91" Offset="0"/>
+                    </LinearGradientBrush>
+                </ListBox.Background>
+            </ListBox>
+            <Button Name="GuessButton" FontFamily="Constantia" Margin="57,503,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Height="53" Grid.Row="1">
+                <Button.Background>
+                    <ImageBrush ImageSource="data/texture/hangman/OK_button.png"/>
+                </Button.Background>
+            </Button>
+            <Canvas Name="HangAll" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,-16,0,0" Height="0" Width="0">
+                <Canvas>
+                    <Rectangle Name="HangHead" Canvas.Left="408" Canvas.Top="324" Height="44" Width="44" HorizontalAlignment="Center" VerticalAlignment="Top">
+                        <Rectangle.Fill>
+                            <ImageBrush ImageSource="data/texture/hangman/Head.png"/>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                </Canvas>
+                <Rectangle Name="HangBody" Canvas.Left="418" Canvas.Top="364" Height="39" Width="24" HorizontalAlignment="Left" VerticalAlignment="Top">
+                    <Rectangle.Fill>
+                        <ImageBrush ImageSource="data/texture/hangman/Body.png"/>
+                    </Rectangle.Fill>
+                </Rectangle>
+
+                <Canvas Name="HangHands">
+                    <Rectangle Name="HangRHand" Canvas.Left="441" Canvas.Top="364" Height="28" Width="15" HorizontalAlignment="Center" VerticalAlignment="Top">
+                        <Rectangle.Fill>
+                            <ImageBrush ImageSource="data/texture/hangman/Arm_1.png"/>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                    <Rectangle Name="HangLHand" Canvas.Left="403" Canvas.Top="364" Height="28" Width="15" HorizontalAlignment="Left" VerticalAlignment="Center">
+                        <Rectangle.Fill>
+                            <ImageBrush ImageSource="data/texture/hangman/Arm_2.png"/>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                </Canvas>
+                <Canvas Name="HangLegs">
+                    <Rectangle Name="HangLLeg" Canvas.Left="405" Canvas.Top="398" Height="32" Width="24" HorizontalAlignment="Left" VerticalAlignment="Top">
+                        <Rectangle.Fill>
+                            <ImageBrush ImageSource="data/texture/hangman/Leg_1.png"/>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                    <Rectangle Name="HangRLeg" Canvas.Left="429" Canvas.Top="398" Height="32" Width="24" HorizontalAlignment="Left" VerticalAlignment="Top">
+                        <Rectangle.Fill>
+                            <ImageBrush ImageSource="data/texture/hangman/Leg_2.png"/>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                </Canvas>
+
+            </Canvas>
+    </Grid>
+    <!-- Конец -->
         <Canvas x:Name="EndScreen" Background="Black" Visibility="Collapsed">
             <Rectangle Height="400" Width="820">
                 <Rectangle.Fill>
